<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HeadLinesFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/main_blue"
        android:background="@color/white"
        app:tabIconTint="@color/black"
        app:tabTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@color/main_blue">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_text"
            android:icon="@drawable/ic_general"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_text"
            android:icon="@drawable/ic_business"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traveling_text"
            android:icon="@drawable/ic_traveling"/>

    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/delegatorView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_white"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/delegatorView"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_news"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/delegatorView"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/paginationProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateTint="@color/main_blue"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/main_blue"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>